--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -40,4 +40,9 @@ jobs:
 
           - name: Run Integration Tests in helloWorld
             run: 
-             mvn clean test -Dspring.datasource.url=jdbc:mysql://localhost:3306/clod01 -Dspring.datasource.username=root -Dspring.datasource.password=zhenyang7838675
+             //mvn clean test -Dspring.datasource.url=jdbc:mysql://localhost:3306/clod01 -Dspring.datasource.username=root -Dspring.datasource.password=zhenyang7838675
+             mvn clean install -DskipTests=false
+          
+          - name: Print application logs
+            if: failure() # only if previous steps failed
+            run: cat /path/to/your/application/logs.log
