--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -30,22 +30,22 @@ jobs:
              java-version: '17'
              distribution: 'adopt'
 
-          - name: Set Environment Variable for Profile
-            run: echo "SPRING_PROFILES_ACTIVE=ci" >> $GITHUB_ENV
-
-          - name: Build with Maven
-            run: mvn -B package --file pom.xml
-
-          - name: Run Integration Tests
-            run: mvn verify
-#          - name: Cache Maven packages
-#            uses: actions/cache@v2
-#            with:
-#               path: ~/.m2
-#               key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-#               restore-keys: ${{ runner.os }}-m2
+#          - name: Set Environment Variable for Profile
+#            run: echo "SPRING_PROFILES_ACTIVE=ci" >> $GITHUB_ENV
 #
-#          - name: Run Integration Tests in helloWorld
-#            run:
-#             mvn clean test -Dspring.datasource.url=jdbc:mysql://localhost:3306/clod01 -Dspring.datasource.username=root -Dspring.datasource.password=zhenyang7838675
+#          - name: Build with Maven
+#            run: mvn -B package --file pom.xml
 #
+#          - name: Run Integration Tests
+#            run: mvn verify
+          - name: Cache Maven packages
+            uses: actions/cache@v2
+            with:
+               path: ~/.m2
+               key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+               restore-keys: ${{ runner.os }}-m2
+
+          - name: Run Integration Tests in helloWorld
+            run:
+             mvn clean test -Dspring.datasource.url=jdbc:mysql://localhost:3306/cloud01 -Dspring.datasource.username=root -Dspring.datasource.password=zhenyang7838675
+
